--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #4369b2;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+}
